--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -11,6 +11,10 @@
     cursor: pointer;
 }
 
+.m-body .m-content {
+    padding: 10px 30px 30px 30px;
+}
+
 /*missed css*/
 .m-widget4__item.m-widget4__item--last, .m-widget4__item:last-child {
     border-bottom: 0;
