--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -110,8 +110,14 @@ select.form-control {
 }
 
 /*media query*/
-@media (max-width: 767.98px) {
+@media only screen and (max-width: 767.98px) {
     .m-portlet__body {
         padding: 5px !important;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .m-header-menu .m-menu__nav > .m-menu__item .m-menu__submenu > .m-menu__subnav > .m-menu__item {
+        background: transparent;
     }
 }
