--- a/public/acm/AlaatvCustomFiles/css/page-content-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page-content-show.css
@@ -37,6 +37,24 @@
     margin-top: 0;
 }
 
+.btnAddToCart .fa.fa-cart-arrow-down {
+    font-size: 2rem !important;
+    color: white !important;
+}
+
+.btnAddToCart {
+    font-size: 1.2rem;
+    background-color: #00cc1b;
+}
+.btnViewProductPage {
+    color: white !important;
+}
+.btnAddToCart,
+.btnViewProductPage {
+    position: relative;
+    z-index: 1;
+}
+
 /*media query*/
 @media only screen and (max-width: 1100px) and (min-width: 992px) {
     .a-widget5 .a-widget5__item .a-widget5__content .a-widget5__pic,
