--- a/public/acm/AlaatvCustomFiles/css/page-product-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page-product-show.css
@@ -83,14 +83,11 @@
     right: 6px;
 }
 .m-nav .m-nav__item > .m-nav__link .m-nav__link-title > .m-nav__link-wrap .m-nav__link-text {
-    padding-left: 1.1rem;
+    padding-left: 2.2rem;
 }
 .m-nav.m-nav--active-bg .m-nav__item.m-nav__item--active > .m-nav__link {
     background-color: #ffb659;
     padding-right: 45px !important;
-}
-.m-nav .m-nav__item > .m-nav__link .m-nav__link-title > .m-nav__link-wrap .m-nav__link-text {
-    padding-left: 1.6rem;
 }
 .m-nav .m-nav__item > .m-nav__link .m-nav__link-arrow::before {
     left: 20px;
@@ -214,6 +211,12 @@
 
 #productDetailes.m-portlet .m-portlet__head .m-portlet__head-tools .m-portlet__nav .m-portlet__nav-item .m-portlet__nav-link.m-portlet__nav-link--icon i {
     color: white;
+}
+
+.selectableProduct-child-lastNode {
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: dotted 1px #eaeaea;
 }
 
 /*media query*/
