remove infinite carousel loop

--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.css
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.css
@@ -253,7 +253,10 @@
     box-shadow: none;
     border: none;
 }
-
+.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
+    -webkit-text-stroke: 3px #ff9000;
+    font-size: 8rem !important;
+}
 
 
 
