--- a/public/acm/AlaatvCustomFiles/css/page-content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page-content-search.css
@@ -98,6 +98,14 @@
     cursor: not-allowed;
 }
 
+#product-carousel .owl-item {
+    margin-top: 5px;
+}
+.ribbon {
+    right: -5px;
+    top: -5px;
+}
+
 @media only screen and (min-width: 1190px)  {
     .ProductAndSetAndVideoWraper {
         /*max-width: 75%;*/
