discount ribbon update

--- a/public/acm/AlaatvCustomFiles/css/page-user-dashboard.css
+++ b/public/acm/AlaatvCustomFiles/css/page-user-dashboard.css
@@ -47,4 +47,7 @@
         width: 100%;
         display: block;
     }
+    .homePageNavigation .row[class*="m-row--col-separator-"] > div:last-child {
+        border-bottom: 1px solid #ebedf2;
+    }
 }
