--- a/public/acm/AlaatvCustomFiles/components/ribbon/style.css
+++ b/public/acm/AlaatvCustomFiles/components/ribbon/style.css
@@ -47,8 +47,8 @@
     width: 75px; height: 75px;
     text-align: right;
 }
-.ribbon span {
-    font-size: 20px;
+.ribbon > span {
+    font-size: 18px;
     font-weight: bold;
     color: #FFF;
     text-transform: uppercase;
@@ -58,27 +58,30 @@
     -webkit-transform: rotate(45deg);
     width: 100px;
     display: block;
-    background: #c36500;
-    background: linear-gradient(#ff9000 0%, #c36500 100%);
+    background: #ac0001;
+    background: linear-gradient(#ff0001 0%,#ac0001 100%);
     box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
     position: absolute;
     top: 19px; right: -21px;
 }
-.ribbon span::before {
+.ribbon > span::before {
     content: "";
     position: absolute; left: 0px; top: 100%;
     z-index: -1;
-    border-left: 3px solid #c36500;
+    border-left: 3px solid #ac0001;
     border-right: 3px solid transparent;
     border-bottom: 3px solid transparent;
-    border-top: 3px solid #c36500;
+    border-top: 3px solid #ac0001;
 }
-.ribbon span::after {
+.ribbon > span::after {
     content: "";
     position: absolute; right: 0px; top: 100%;
     z-index: -1;
     border-left: 3px solid transparent;
-    border-right: 3px solid #c36500;
+    border-right: 3px solid #ac0001;
     border-bottom: 3px solid transparent;
-    border-top: 3px solid #c36500;
+    border-top: 3px solid #ac0001;
+}
+.ribbon > span > span {
+    font-size: 11px;
 }
