block update (add blue square)

--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -252,7 +252,7 @@
 .blueSquare {
     width: 10px;
     height: 10px;
-    background: blue;
+    background: #36a3f7;
     margin-left: 0px;
     position: relative;
     margin-right: 10px;
