--- a/public/acm/AlaatvCustomFiles/css/page-checkout-review.css
+++ b/public/acm/AlaatvCustomFiles/css/page-checkout-review.css
@@ -115,6 +115,38 @@
     display: none;
 }
 
+
+.discountCodeWraper {
+    margin-bottom: 0.5rem;
+}
+.bankLogo {
+    max-width: 60px;
+    border-radius: 4px;
+}
+.m-widget1 .m-widget1__item:first-child {
+    padding: 0;
+}
+.m-widget1 .m-widget1__item {
+    padding: 0.5rem 0;
+    position: relative;
+}
+.bootstrap-switch {
+    border-color: #9f9f9f;
+}
+.baseCostWraper .m-widget1__title {
+    font-weight: 900 !important;
+}
+.yourProfitWraper .m-widget1__title span {
+    color: gray;font-size: 1rem;
+}
+.costReportWraper.m-widget1 .m-widget1__item .m-widget1__title,
+.costReportWraper.m-widget1 .m-widget1__item .m-widget1__number {
+    font-weight: normal;
+}
+.useWalletReportWraper {
+    border-bottom: .07rem dashed #848484;
+}
+
 /*media query*/
 @media (min-width: 767.98px) {
     .btnAddMoreProductToCart-desktop {
