--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -111,6 +111,9 @@ select.form-control {
 
 /*media query*/
 @media only screen and (max-width: 767.98px) {
+    .m-body .m-content {
+        padding: 10px 10px 30px 10px;
+    }
     .m-portlet__body {
         padding: 5px !important;
     }
