--- a/public/acm/AlaatvCustomFiles/css/page-user-profile.css
+++ b/public/acm/AlaatvCustomFiles/css/page-user-profile.css
@@ -1,5 +1,5 @@
 .datepicker-plot-area.datepicker-persian {
-    font-family: IRANSans !important;
+    font-family: IRANSans, Arial !important;
 }
 
 .userFullname {
