--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -260,6 +260,24 @@
     margin-left: 10px;
 }
 
+
+#carouselMainSlideShow .carousel-item {
+    position: relative;
+}
+#carouselMainSlideShow .imageSlideOfSlideshow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+#carouselMainSlideShow .loadingSlideshow {
+    width: 70px;
+    position: absolute;
+    top: calc( 50% - 35px);
+    left: calc( 50% - 35px);
+    z-index: 0;
+}
+
 /*media query*/
 @media only screen and (max-width: 1024px) {
     .m-header-menu .m-menu__nav > .m-menu__item .m-menu__submenu > .m-menu__subnav > .m-menu__item {
