--- a/public/acm/AlaatvCustomFiles/css/page-product-landing8.css
+++ b/public/acm/AlaatvCustomFiles/css/page-product-landing8.css
@@ -41,7 +41,7 @@
 
 
 .flip-clock {
-    font-family: IRANSans, Arial;
+    font-family: IRANSans;
     justify-content: center;
 }
 .konkourTimer, .konkourTimer * {
@@ -58,7 +58,124 @@
     box-shadow: none;
 }
 
+
+
+.lessonsTimesWraper {
+
+}
+.lessonsTimesWraper .lessonsTimesWraper-header {
+
+}
+.lessonsTimesWraper .lessonsTimesWraper-header .lessonsTimesWraper-header-top {
+    text-align: center;
+    border-radius: 100%;
+    background: white;
+    position: relative;
+    z-index: 1;
+    margin-bottom: -36px;
+    height: 80px;
+}
+.lessonsTimesWraper .lessonsTimesWraper-header .lessonsTimesWraper-header-top img {
+    width: 90px;
+    margin-bottom: -50px;
+}
+.lessonsTimesWraper .lessonsTimesWraper-header .lessonsTimesWraper-header-bottom {
+    color: white;
+    text-align: center;
+    padding-top: 95px;
+    padding-bottom: 20px;
+    position: relative;
+    z-index: -1;
+}
+.lessonsTimesWraper .lessonsTimesWraper-header .lessonsTimesWraper-header-bottom .lessonsTimesWraper-header-bottom-slogan {
+    background: #ffda0f;
+    color: #021128;
+    padding: 5px 10px;
+    border-radius: 100px;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+.lessonsTimesWraper .lessonsTimesWraper-body {
+    /*margin-bottom: -20px;*/
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table {
+    width: 100%;
+    position: relative;
+    z-index: 1;
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table tr {
+    border-bottom: solid 1px white;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table tr:hover {
+    background: #0b326f;
+    transform: scale(1.05);
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table tr:last-child {
+    border-bottom: none;
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table tr td {
+    padding: 5px;
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table tr td:first-child {
+    text-align: right;
+    padding-right: 15px;
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table tr td:first-child a {
+    color: white;
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table tr td:last-child {
+    text-align: left;
+    padding-left: 15px;
+}
+.lessonsTimesWraper .lessonsTimesWraper-body table tr td:last-child a {
+    color: #ffda0f;
+}
+.lessonsTimesWraper .lessonsTimesWraper-footer {
+    overflow: hidden;
+    padding-top: 38px;
+}
+.lessonsTimesWraper .lessonsTimesWraper-footer .lessonsTimesWraper-footer-slogan {
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    background: #ff0f10;
+    width: 250px;
+    margin: auto auto -140px auto;
+    border-radius: 100%;
+    height: 250px;
+    padding-top: 15px;
+    font-weight: bold;
+    position: relative;
+    z-index: 2;
+}
+
+.lessonsTimesWraper .lessonsTimesWraper-header .lessonsTimesWraper-header-bottom,
+.lessonsTimesWraper .lessonsTimesWraper-body,
+.lessonsTimesWraper .lessonsTimesWraper-footer{
+    background: #021128;
+}
+
+
+.sideItems .lessonsTimesWraper {
+    display: none;
+}
+.mainItems .lessonsTimesWraper {
+    display: block;
+}
+
 /*media query*/
+@media only screen and (min-width: 375px) {
+    .lessonsTimesWraper .lessonsTimesWraper-body table {
+        font-size: 15px;
+    }
+}
+@media only screen and (min-width: 414px) {
+    .lessonsTimesWraper .lessonsTimesWraper-body table {
+        font-size: 17px;
+    }
+}
 @media only screen and (max-width: 767px) {
     .m-portlet .m-portlet-fit--sides {
         margin-right: -0.4rem;
@@ -77,5 +194,41 @@
     .flip-clock .flip-clock-group .flip-clock-list {
         width: 8em;
         height: 10em;
+    }
+}
+@media only screen and (min-width: 800px) {
+    .lessonsTimesWraper .lessonsTimesWraper-body table {
+        font-size: 21px;
+    }
+}
+@media only screen and (min-width: 1080px) {
+    .lessonsTimesWraper .lessonsTimesWraper-body table {
+        font-size: 15px;
+    }
+}
+@media only screen and (min-width: 1124px) {
+    .lessonsTimesWraper .lessonsTimesWraper-body table {
+        font-size: 15px;
+    }
+    .sideItems .lessonsTimesWraper {
+        display: block;
+    }
+    .mainItems .lessonsTimesWraper {
+        display: none;
+    }
+}
+@media only screen and (min-width: 1270px) {
+    .lessonsTimesWraper .lessonsTimesWraper-body table {
+        font-size: 17px;
+    }
+}
+@media only screen and (min-width: 1500px) {
+    .lessonsTimesWraper .lessonsTimesWraper-body table {
+        font-size: 19px;
+    }
+}
+@media only screen and (min-width: 1800px) {
+    .lessonsTimesWraper .lessonsTimesWraper-body table {
+        font-size: 22px;
     }
 }
