reduce size of all.css and all.js update

--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.css
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.css
@@ -288,10 +288,16 @@
     display: flex;
     justify-content: center;
 }
-.a--owl-carousel-init-loading img {
+.a--owl-carousel-init-loading .lds-roller {
     width: 200px;
+    height: 200px;
 }
 
+
+
+.owl-carousel .owl-item.active .owl-lazy.main-photo-forLoading {
+    min-height: 150px;
+}
 
 
 /*content-carousel*/
