--- a/public/acm/AlaatvCustomFiles/css/page-product-landing8.css
+++ b/public/acm/AlaatvCustomFiles/css/page-product-landing8.css
@@ -41,7 +41,7 @@
 
 
 .flip-clock {
-    font-family: IRANSans;
+    font-family: IRANSans, Tahoma, Arial, Geneva, sans-serif;
     justify-content: center;
 }
 .konkourTimer, .konkourTimer * {
