live view update

--- a/public/css/user-orders.css
+++ b/public/css/user-orders.css
@@ -1,20 +1,1 @@
-#user-orderList table tr td,
-#user-orderList table tr th {
-    /*vertical-align: middle;*/
-}
-
-.orderTotalyInfoWraper .table tr:first-child td {
-    border: none;
-}
-
-.orderDetailes-orderprouctList .orderProductItemPrice {
-    display: ruby;
-}
-
-#user-instalmentsList .onlinePayment {
-    width: 100px;
-}
-
-.orderProductItemPrice .a--productPrice {
-    white-space: nowrap;
-}
+.orderTotalyInfoWraper .table tr:first-child td{border:none}.orderDetailes-orderprouctList .orderProductItemPrice{display:ruby}#user-instalmentsList .onlinePayment{width:100px}.orderProductItemPrice .a--productPrice{white-space:nowrap}
