--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -122,6 +122,7 @@
         width: 100%;
         img {
           width: 100%;
+          transform-style: flat;
         }
       }
 
@@ -141,19 +142,26 @@
       .a--block-titleWrapper {
         background: #828282;
         padding: 5px 10px;
+        height: 45px;
+        display: flex;
+        align-items: center;
+
         a {
           color: white;
         }
       }
       .a--block-detailesWrapper {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         padding: 5px 10px;
+        flex-wrap: wrap;
 
         .a--block-set-author-pic {
           width: 40px;
-          border-radius: 100%;
+          height: 40px;
+          border-radius: 100px;
           overflow: hidden;
+
           img {
             width: 100%;
           }
@@ -162,6 +170,13 @@
         .a--block-set-author-name {
           padding-right: 10px;
           width: calc( 100% - 40px - 30px );
+        }
+
+        @media (max-width: 481px) {
+          .a--block-set-author-name {
+            order: 3;
+            width: 100%;
+          }
         }
 
         .a--block-set-count {
