--- a/public/acm/webFonts/IRANSans/css/fontiran.css
+++ b/public/acm/webFonts/IRANSans/css/fontiran.css
@@ -18,6 +18,7 @@ This set of fonts are used in this project under the license: (.....)
 **/
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: bold;
 	src: url('../fonts/eot/IRANSansWeb_Bold.eot');
@@ -28,6 +29,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: 500;
 	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Medium.eot');
@@ -38,6 +40,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: 300;
 	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Light.eot');
@@ -48,6 +51,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: 200;
 	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_UltraLight.eot');
@@ -58,6 +62,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: normal;
 	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb.eot');
@@ -68,6 +73,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: bold;
 	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Bold.eot');
@@ -78,6 +84,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: 500;
 	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Medium.eot');
@@ -88,6 +95,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: 300;
 	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Light.eot');
@@ -98,6 +106,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: 200;
 	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_UltraLight.eot');
@@ -108,6 +117,7 @@ This set of fonts are used in this project under the license: (.....)
 }
 @font-face {
 	font-family: IRANSans;
+	font-display: fallback;
 	font-style: normal;
 	font-weight: normal;
 	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum).eot');
