--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -1,5 +1,8 @@
 
 /*fix them style*/
+body, html {
+    height: auto;
+}
 .m-portlet.m-portlet--head-overlay .m-portlet__body {
     margin-top: auto;
 }
